tests/negative/syntax/unknown-escape/test.smol
package testing;

class Test {
	static main() Unit {
		var x String = "foo\q";
	}
}
